viridis.output
Terminals unused in grammar

    BOOLEAN
    FLOAT
    INT
    STRING
    VOID
    ERRO
    COMENTARIO_LINHA
    FOR
    INPUT
    RETURN
    ARITMETICOS
    RELACIONAIS
    LOGICOS
    MAIN
    ATRIBUICAO
    PONTO
    VARIAVEL


State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program line

    3 line: statement FIMLINHA
    4     | FIMLINHA

    5 statement: print_statement
    6          | if_statement
    7          | while_statement

    8 if_statement: IF head_expression head_statement elif_statement else_statement
    9             | IF head_expression head_statement else_statement

   10 elif_statement: elif_statement ELIF head_expression head_statement elif_statement
   11               | ELIF head_expression head_statement

   12 else_statement: %empty
   13               | ELSE head_statement

   14 while_statement: WHILE head_expression head_statement

   15 head_expression: ABRE_PARENTESES expression FECHA_PARENTESES

   16 head_statement: INICIOBLOCO FIMLINHA statement FIMLINHA FIMBLOCO

   17 expression: boolean_expression_int
   18           | boolean_expression_float
   19           | boolean_expression_string

   20 print_statement: OUTPUT ABRE_PARENTESES int_expression FECHA_PARENTESES
   21                | OUTPUT ABRE_PARENTESES float_expression FECHA_PARENTESES
   22                | OUTPUT ABRE_PARENTESES string_expression FECHA_PARENTESES
   23                | OUTPUT ABRE_PARENTESES boolean_expression_int FECHA_PARENTESES
   24                | OUTPUT ABRE_PARENTESES boolean_expression_float FECHA_PARENTESES
   25                | OUTPUT ABRE_PARENTESES boolean_expression_string FECHA_PARENTESES

   26 int_expression: CONST_INT
   27               | int_expression '+' int_expression
   28               | int_expression '-' int_expression
   29               | int_expression '*' int_expression
   30               | int_expression '/' int_expression
   31               | '-' int_expression
   32               | int_expression ELEVADO int_expression
   33               | ABRE_PARENTESES int_expression FECHA_PARENTESES

   34 float_expression: CONST_FLOAT
   35                 | float_expression '+' float_expression
   36                 | float_expression '-' float_expression
   37                 | float_expression '*' float_expression
   38                 | float_expression '/' float_expression
   39                 | '-' float_expression
   40                 | float_expression ELEVADO float_expression
   41                 | ABRE_PARENTESES float_expression FECHA_PARENTESES

   42 string_expression: CONST_STRING

   43 boolean_expression_int: CONST_BOOLEAN_INT
   44                       | int_expression
   45                       | boolean_expression_int MAIOR boolean_expression_int
   46                       | boolean_expression_int MENOR boolean_expression_int
   47                       | boolean_expression_int MAIOR_IGUAL boolean_expression_int
   48                       | boolean_expression_int MENOR_IGUAL boolean_expression_int
   49                       | boolean_expression_int IGUAL boolean_expression_int
   50                       | boolean_expression_int DIFERENTE boolean_expression_int
   51                       | boolean_expression_int AND boolean_expression_int
   52                       | boolean_expression_int OR boolean_expression_int
   53                       | NOT boolean_expression_int
   54                       | ABRE_PARENTESES boolean_expression_int FECHA_PARENTESES

   55 boolean_expression_float: CONST_BOOLEAN_FLOAT
   56                         | float_expression
   57                         | boolean_expression_float MAIOR boolean_expression_float
   58                         | boolean_expression_float MENOR boolean_expression_float
   59                         | boolean_expression_float MAIOR_IGUAL boolean_expression_float
   60                         | boolean_expression_float MENOR_IGUAL boolean_expression_float
   61                         | boolean_expression_float IGUAL boolean_expression_float
   62                         | boolean_expression_float DIFERENTE boolean_expression_float
   63                         | boolean_expression_float AND boolean_expression_float
   64                         | boolean_expression_float OR boolean_expression_float
   65                         | NOT boolean_expression_float
   66                         | ABRE_PARENTESES boolean_expression_float FECHA_PARENTESES

   67 boolean_expression_string: CONST_BOOLEAN_STRING
   68                          | string_expression
   69                          | boolean_expression_string MAIOR boolean_expression_string
   70                          | boolean_expression_string MENOR boolean_expression_string
   71                          | boolean_expression_string MAIOR_IGUAL boolean_expression_string
   72                          | boolean_expression_string MENOR_IGUAL boolean_expression_string
   73                          | boolean_expression_string IGUAL boolean_expression_string
   74                          | boolean_expression_string DIFERENTE boolean_expression_string
   75                          | ABRE_PARENTESES boolean_expression_string FECHA_PARENTESES


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 29 37
    '+' (43) 27 35
    '-' (45) 28 31 36 39
    '/' (47) 30 38
    error (256)
    BOOLEAN (258)
    FLOAT (259)
    INT (260)
    STRING (261)
    VOID (262)
    ELEVADO (263) 32 40
    ABRE_PARENTESES (264) 15 20 21 22 23 24 25 33 41 54 66 75
    FECHA_PARENTESES (265) 15 20 21 22 23 24 25 33 41 54 66 75
    ERRO (266)
    COMENTARIO_LINHA (267)
    FOR (268)
    WHILE (269) 14
    IF (270) 8 9
    ELSE (271) 13
    ELIF (272) 10 11
    OUTPUT (273) 20 21 22 23 24 25
    INPUT (274)
    RETURN (275)
    INICIOBLOCO (276) 16
    FIMBLOCO (277) 16
    ARITMETICOS (278)
    RELACIONAIS (279)
    LOGICOS (280)
    FIMLINHA (281) 3 4 16
    MAIN (282)
    ATRIBUICAO (283)
    PONTO (284)
    IGUAL (285) 49 61 73
    DIFERENTE (286) 50 62 74
    MAIOR (287) 45 57 69
    MENOR (288) 46 58 70
    MAIOR_IGUAL (289) 47 59 71
    MENOR_IGUAL (290) 48 60 72
    AND (291) 51 63
    OR (292) 52 64
    NOT (293) 53 65
    CONST_INT <num_int> (294) 26
    CONST_BOOLEAN_INT <num_int> (295) 43
    CONST_FLOAT <num_float> (296) 34
    CONST_BOOLEAN_FLOAT <num_float> (297) 55
    CONST_STRING <string> (298) 42
    CONST_BOOLEAN_STRING <string> (299) 67
    VARIAVEL (300)
    NEGATIVO (301)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1 2
        on right: 0 2
    line (53)
        on left: 3 4
        on right: 2
    statement (54)
        on left: 5 6 7
        on right: 3 16
    if_statement (55)
        on left: 8 9
        on right: 6
    elif_statement (56)
        on left: 10 11
        on right: 8 10
    else_statement (57)
        on left: 12 13
        on right: 8 9
    while_statement (58)
        on left: 14
        on right: 7
    head_expression (59)
        on left: 15
        on right: 8 9 10 11 14
    head_statement (60)
        on left: 16
        on right: 8 9 10 11 13 14
    expression (61)
        on left: 17 18 19
        on right: 15
    print_statement (62)
        on left: 20 21 22 23 24 25
        on right: 5
    int_expression <num_int> (63)
        on left: 26 27 28 29 30 31 32 33
        on right: 20 27 28 29 30 31 32 33 44
    float_expression <num_float> (64)
        on left: 34 35 36 37 38 39 40 41
        on right: 21 35 36 37 38 39 40 41 56
    string_expression <string> (65)
        on left: 42
        on right: 22 68
    boolean_expression_int <num_int> (66)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 17 23 45 46 47 48 49 50 51 52 53 54
    boolean_expression_float <num_float> (67)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 18 24 57 58 59 60 61 62 63 64 65 66
    boolean_expression_string <string> (68)
        on left: 67 68 69 70 71 72 73 74 75
        on right: 19 25 69 70 71 72 73 74 75


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . line

    $end      shift, and go to state 2
    WHILE     shift, and go to state 3
    IF        shift, and go to state 4
    OUTPUT    shift, and go to state 5
    FIMLINHA  shift, and go to state 6

    line             go to state 7
    statement        go to state 8
    if_statement     go to state 9
    while_statement  go to state 10
    print_statement  go to state 11


State 2

    0 $accept: program $end .

    $default  accept


State 3

   14 while_statement: WHILE . head_expression head_statement

    ABRE_PARENTESES  shift, and go to state 12

    head_expression  go to state 13


State 4

    8 if_statement: IF . head_expression head_statement elif_statement else_statement
    9             | IF . head_expression head_statement else_statement

    ABRE_PARENTESES  shift, and go to state 12

    head_expression  go to state 14


State 5

   20 print_statement: OUTPUT . ABRE_PARENTESES int_expression FECHA_PARENTESES
   21                | OUTPUT . ABRE_PARENTESES float_expression FECHA_PARENTESES
   22                | OUTPUT . ABRE_PARENTESES string_expression FECHA_PARENTESES
   23                | OUTPUT . ABRE_PARENTESES boolean_expression_int FECHA_PARENTESES
   24                | OUTPUT . ABRE_PARENTESES boolean_expression_float FECHA_PARENTESES
   25                | OUTPUT . ABRE_PARENTESES boolean_expression_string FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 15


State 6

    4 line: FIMLINHA .

    $default  reduce using rule 4 (line)


State 7

    2 program: program line .

    $default  reduce using rule 2 (program)


State 8

    3 line: statement . FIMLINHA

    FIMLINHA  shift, and go to state 16


State 9

    6 statement: if_statement .

    $default  reduce using rule 6 (statement)


State 10

    7 statement: while_statement .

    $default  reduce using rule 7 (statement)


State 11

    5 statement: print_statement .

    $default  reduce using rule 5 (statement)


State 12

   15 head_expression: ABRE_PARENTESES . expression FECHA_PARENTESES

    ABRE_PARENTESES       shift, and go to state 17
    NOT                   shift, and go to state 18
    CONST_INT             shift, and go to state 19
    CONST_BOOLEAN_INT     shift, and go to state 20
    CONST_FLOAT           shift, and go to state 21
    CONST_BOOLEAN_FLOAT   shift, and go to state 22
    CONST_STRING          shift, and go to state 23
    CONST_BOOLEAN_STRING  shift, and go to state 24
    '-'                   shift, and go to state 25

    expression                 go to state 26
    int_expression             go to state 27
    float_expression           go to state 28
    string_expression          go to state 29
    boolean_expression_int     go to state 30
    boolean_expression_float   go to state 31
    boolean_expression_string  go to state 32


State 13

   14 while_statement: WHILE head_expression . head_statement

    INICIOBLOCO  shift, and go to state 33

    head_statement  go to state 34


State 14

    8 if_statement: IF head_expression . head_statement elif_statement else_statement
    9             | IF head_expression . head_statement else_statement

    INICIOBLOCO  shift, and go to state 33

    head_statement  go to state 35


State 15

   20 print_statement: OUTPUT ABRE_PARENTESES . int_expression FECHA_PARENTESES
   21                | OUTPUT ABRE_PARENTESES . float_expression FECHA_PARENTESES
   22                | OUTPUT ABRE_PARENTESES . string_expression FECHA_PARENTESES
   23                | OUTPUT ABRE_PARENTESES . boolean_expression_int FECHA_PARENTESES
   24                | OUTPUT ABRE_PARENTESES . boolean_expression_float FECHA_PARENTESES
   25                | OUTPUT ABRE_PARENTESES . boolean_expression_string FECHA_PARENTESES

    ABRE_PARENTESES       shift, and go to state 17
    NOT                   shift, and go to state 18
    CONST_INT             shift, and go to state 19
    CONST_BOOLEAN_INT     shift, and go to state 20
    CONST_FLOAT           shift, and go to state 21
    CONST_BOOLEAN_FLOAT   shift, and go to state 22
    CONST_STRING          shift, and go to state 23
    CONST_BOOLEAN_STRING  shift, and go to state 24
    '-'                   shift, and go to state 25

    int_expression             go to state 36
    float_expression           go to state 37
    string_expression          go to state 38
    boolean_expression_int     go to state 39
    boolean_expression_float   go to state 40
    boolean_expression_string  go to state 41


State 16

    3 line: statement FIMLINHA .

    $default  reduce using rule 3 (line)


State 17

   33 int_expression: ABRE_PARENTESES . int_expression FECHA_PARENTESES
   41 float_expression: ABRE_PARENTESES . float_expression FECHA_PARENTESES
   54 boolean_expression_int: ABRE_PARENTESES . boolean_expression_int FECHA_PARENTESES
   66 boolean_expression_float: ABRE_PARENTESES . boolean_expression_float FECHA_PARENTESES
   75 boolean_expression_string: ABRE_PARENTESES . boolean_expression_string FECHA_PARENTESES

    ABRE_PARENTESES       shift, and go to state 17
    NOT                   shift, and go to state 18
    CONST_INT             shift, and go to state 19
    CONST_BOOLEAN_INT     shift, and go to state 20
    CONST_FLOAT           shift, and go to state 21
    CONST_BOOLEAN_FLOAT   shift, and go to state 22
    CONST_STRING          shift, and go to state 23
    CONST_BOOLEAN_STRING  shift, and go to state 24
    '-'                   shift, and go to state 25

    int_expression             go to state 42
    float_expression           go to state 43
    string_expression          go to state 29
    boolean_expression_int     go to state 44
    boolean_expression_float   go to state 45
    boolean_expression_string  go to state 46


State 18

   53 boolean_expression_int: NOT . boolean_expression_int
   65 boolean_expression_float: NOT . boolean_expression_float

    ABRE_PARENTESES      shift, and go to state 47
    NOT                  shift, and go to state 18
    CONST_INT            shift, and go to state 19
    CONST_BOOLEAN_INT    shift, and go to state 20
    CONST_FLOAT          shift, and go to state 21
    CONST_BOOLEAN_FLOAT  shift, and go to state 22
    '-'                  shift, and go to state 25

    int_expression            go to state 27
    float_expression          go to state 28
    boolean_expression_int    go to state 48
    boolean_expression_float  go to state 49


State 19

   26 int_expression: CONST_INT .

    $default  reduce using rule 26 (int_expression)


State 20

   43 boolean_expression_int: CONST_BOOLEAN_INT .

    $default  reduce using rule 43 (boolean_expression_int)


State 21

   34 float_expression: CONST_FLOAT .

    $default  reduce using rule 34 (float_expression)


State 22

   55 boolean_expression_float: CONST_BOOLEAN_FLOAT .

    $default  reduce using rule 55 (boolean_expression_float)


State 23

   42 string_expression: CONST_STRING .

    $default  reduce using rule 42 (string_expression)


State 24

   67 boolean_expression_string: CONST_BOOLEAN_STRING .

    $default  reduce using rule 67 (boolean_expression_string)


State 25

   31 int_expression: '-' . int_expression
   39 float_expression: '-' . float_expression

    ABRE_PARENTESES  shift, and go to state 50
    CONST_INT        shift, and go to state 19
    CONST_FLOAT      shift, and go to state 21
    '-'              shift, and go to state 25

    int_expression    go to state 51
    float_expression  go to state 52


State 26

   15 head_expression: ABRE_PARENTESES expression . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 53


State 27

   27 int_expression: int_expression . '+' int_expression
   28               | int_expression . '-' int_expression
   29               | int_expression . '*' int_expression
   30               | int_expression . '/' int_expression
   32               | int_expression . ELEVADO int_expression
   44 boolean_expression_int: int_expression .

    ELEVADO  shift, and go to state 54
    '+'      shift, and go to state 55
    '-'      shift, and go to state 56
    '*'      shift, and go to state 57
    '/'      shift, and go to state 58

    $default  reduce using rule 44 (boolean_expression_int)


State 28

   35 float_expression: float_expression . '+' float_expression
   36                 | float_expression . '-' float_expression
   37                 | float_expression . '*' float_expression
   38                 | float_expression . '/' float_expression
   40                 | float_expression . ELEVADO float_expression
   56 boolean_expression_float: float_expression .

    ELEVADO  shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '*'      shift, and go to state 62
    '/'      shift, and go to state 63

    $default  reduce using rule 56 (boolean_expression_float)


State 29

   68 boolean_expression_string: string_expression .

    $default  reduce using rule 68 (boolean_expression_string)


State 30

   17 expression: boolean_expression_int .
   45 boolean_expression_int: boolean_expression_int . MAIOR boolean_expression_int
   46                       | boolean_expression_int . MENOR boolean_expression_int
   47                       | boolean_expression_int . MAIOR_IGUAL boolean_expression_int
   48                       | boolean_expression_int . MENOR_IGUAL boolean_expression_int
   49                       | boolean_expression_int . IGUAL boolean_expression_int
   50                       | boolean_expression_int . DIFERENTE boolean_expression_int
   51                       | boolean_expression_int . AND boolean_expression_int
   52                       | boolean_expression_int . OR boolean_expression_int

    IGUAL        shift, and go to state 64
    DIFERENTE    shift, and go to state 65
    MAIOR        shift, and go to state 66
    MENOR        shift, and go to state 67
    MAIOR_IGUAL  shift, and go to state 68
    MENOR_IGUAL  shift, and go to state 69
    AND          shift, and go to state 70
    OR           shift, and go to state 71

    $default  reduce using rule 17 (expression)


State 31

   18 expression: boolean_expression_float .
   57 boolean_expression_float: boolean_expression_float . MAIOR boolean_expression_float
   58                         | boolean_expression_float . MENOR boolean_expression_float
   59                         | boolean_expression_float . MAIOR_IGUAL boolean_expression_float
   60                         | boolean_expression_float . MENOR_IGUAL boolean_expression_float
   61                         | boolean_expression_float . IGUAL boolean_expression_float
   62                         | boolean_expression_float . DIFERENTE boolean_expression_float
   63                         | boolean_expression_float . AND boolean_expression_float
   64                         | boolean_expression_float . OR boolean_expression_float

    IGUAL        shift, and go to state 72
    DIFERENTE    shift, and go to state 73
    MAIOR        shift, and go to state 74
    MENOR        shift, and go to state 75
    MAIOR_IGUAL  shift, and go to state 76
    MENOR_IGUAL  shift, and go to state 77
    AND          shift, and go to state 78
    OR           shift, and go to state 79

    $default  reduce using rule 18 (expression)


State 32

   19 expression: boolean_expression_string .
   69 boolean_expression_string: boolean_expression_string . MAIOR boolean_expression_string
   70                          | boolean_expression_string . MENOR boolean_expression_string
   71                          | boolean_expression_string . MAIOR_IGUAL boolean_expression_string
   72                          | boolean_expression_string . MENOR_IGUAL boolean_expression_string
   73                          | boolean_expression_string . IGUAL boolean_expression_string
   74                          | boolean_expression_string . DIFERENTE boolean_expression_string

    IGUAL        shift, and go to state 80
    DIFERENTE    shift, and go to state 81
    MAIOR        shift, and go to state 82
    MENOR        shift, and go to state 83
    MAIOR_IGUAL  shift, and go to state 84
    MENOR_IGUAL  shift, and go to state 85

    $default  reduce using rule 19 (expression)


State 33

   16 head_statement: INICIOBLOCO . FIMLINHA statement FIMLINHA FIMBLOCO

    FIMLINHA  shift, and go to state 86


State 34

   14 while_statement: WHILE head_expression head_statement .

    $default  reduce using rule 14 (while_statement)


State 35

    8 if_statement: IF head_expression head_statement . elif_statement else_statement
    9             | IF head_expression head_statement . else_statement

    ELSE  shift, and go to state 87
    ELIF  shift, and go to state 88

    $default  reduce using rule 12 (else_statement)

    elif_statement  go to state 89
    else_statement  go to state 90


State 36

   20 print_statement: OUTPUT ABRE_PARENTESES int_expression . FECHA_PARENTESES
   27 int_expression: int_expression . '+' int_expression
   28               | int_expression . '-' int_expression
   29               | int_expression . '*' int_expression
   30               | int_expression . '/' int_expression
   32               | int_expression . ELEVADO int_expression
   44 boolean_expression_int: int_expression .

    ELEVADO           shift, and go to state 54
    FECHA_PARENTESES  shift, and go to state 91
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '*'               shift, and go to state 57
    '/'               shift, and go to state 58

    FECHA_PARENTESES  [reduce using rule 44 (boolean_expression_int)]
    $default          reduce using rule 44 (boolean_expression_int)


State 37

   21 print_statement: OUTPUT ABRE_PARENTESES float_expression . FECHA_PARENTESES
   35 float_expression: float_expression . '+' float_expression
   36                 | float_expression . '-' float_expression
   37                 | float_expression . '*' float_expression
   38                 | float_expression . '/' float_expression
   40                 | float_expression . ELEVADO float_expression
   56 boolean_expression_float: float_expression .

    ELEVADO           shift, and go to state 59
    FECHA_PARENTESES  shift, and go to state 92
    '+'               shift, and go to state 60
    '-'               shift, and go to state 61
    '*'               shift, and go to state 62
    '/'               shift, and go to state 63

    FECHA_PARENTESES  [reduce using rule 56 (boolean_expression_float)]
    $default          reduce using rule 56 (boolean_expression_float)


State 38

   22 print_statement: OUTPUT ABRE_PARENTESES string_expression . FECHA_PARENTESES
   68 boolean_expression_string: string_expression .

    FECHA_PARENTESES  shift, and go to state 93

    FECHA_PARENTESES  [reduce using rule 68 (boolean_expression_string)]
    $default          reduce using rule 68 (boolean_expression_string)


State 39

   23 print_statement: OUTPUT ABRE_PARENTESES boolean_expression_int . FECHA_PARENTESES
   45 boolean_expression_int: boolean_expression_int . MAIOR boolean_expression_int
   46                       | boolean_expression_int . MENOR boolean_expression_int
   47                       | boolean_expression_int . MAIOR_IGUAL boolean_expression_int
   48                       | boolean_expression_int . MENOR_IGUAL boolean_expression_int
   49                       | boolean_expression_int . IGUAL boolean_expression_int
   50                       | boolean_expression_int . DIFERENTE boolean_expression_int
   51                       | boolean_expression_int . AND boolean_expression_int
   52                       | boolean_expression_int . OR boolean_expression_int

    FECHA_PARENTESES  shift, and go to state 94
    IGUAL             shift, and go to state 64
    DIFERENTE         shift, and go to state 65
    MAIOR             shift, and go to state 66
    MENOR             shift, and go to state 67
    MAIOR_IGUAL       shift, and go to state 68
    MENOR_IGUAL       shift, and go to state 69
    AND               shift, and go to state 70
    OR                shift, and go to state 71


State 40

   24 print_statement: OUTPUT ABRE_PARENTESES boolean_expression_float . FECHA_PARENTESES
   57 boolean_expression_float: boolean_expression_float . MAIOR boolean_expression_float
   58                         | boolean_expression_float . MENOR boolean_expression_float
   59                         | boolean_expression_float . MAIOR_IGUAL boolean_expression_float
   60                         | boolean_expression_float . MENOR_IGUAL boolean_expression_float
   61                         | boolean_expression_float . IGUAL boolean_expression_float
   62                         | boolean_expression_float . DIFERENTE boolean_expression_float
   63                         | boolean_expression_float . AND boolean_expression_float
   64                         | boolean_expression_float . OR boolean_expression_float

    FECHA_PARENTESES  shift, and go to state 95
    IGUAL             shift, and go to state 72
    DIFERENTE         shift, and go to state 73
    MAIOR             shift, and go to state 74
    MENOR             shift, and go to state 75
    MAIOR_IGUAL       shift, and go to state 76
    MENOR_IGUAL       shift, and go to state 77
    AND               shift, and go to state 78
    OR                shift, and go to state 79


State 41

   25 print_statement: OUTPUT ABRE_PARENTESES boolean_expression_string . FECHA_PARENTESES
   69 boolean_expression_string: boolean_expression_string . MAIOR boolean_expression_string
   70                          | boolean_expression_string . MENOR boolean_expression_string
   71                          | boolean_expression_string . MAIOR_IGUAL boolean_expression_string
   72                          | boolean_expression_string . MENOR_IGUAL boolean_expression_string
   73                          | boolean_expression_string . IGUAL boolean_expression_string
   74                          | boolean_expression_string . DIFERENTE boolean_expression_string

    FECHA_PARENTESES  shift, and go to state 96
    IGUAL             shift, and go to state 80
    DIFERENTE         shift, and go to state 81
    MAIOR             shift, and go to state 82
    MENOR             shift, and go to state 83
    MAIOR_IGUAL       shift, and go to state 84
    MENOR_IGUAL       shift, and go to state 85


State 42

   27 int_expression: int_expression . '+' int_expression
   28               | int_expression . '-' int_expression
   29               | int_expression . '*' int_expression
   30               | int_expression . '/' int_expression
   32               | int_expression . ELEVADO int_expression
   33               | ABRE_PARENTESES int_expression . FECHA_PARENTESES
   44 boolean_expression_int: int_expression .

    ELEVADO           shift, and go to state 54
    FECHA_PARENTESES  shift, and go to state 97
    '+'               shift, and go to state 55
    '-'               shift, and go to state 56
    '*'               shift, and go to state 57
    '/'               shift, and go to state 58

    FECHA_PARENTESES  [reduce using rule 44 (boolean_expression_int)]
    $default          reduce using rule 44 (boolean_expression_int)


State 43

   35 float_expression: float_expression . '+' float_expression
   36                 | float_expression . '-' float_expression
   37                 | float_expression . '*' float_expression
   38                 | float_expression . '/' float_expression
   40                 | float_expression . ELEVADO float_expression
   41                 | ABRE_PARENTESES float_expression . FECHA_PARENTESES
   56 boolean_expression_float: float_expression .

    ELEVADO           shift, and go to state 59
    FECHA_PARENTESES  shift, and go to state 98
    '+'               shift, and go to state 60
    '-'               shift, and go to state 61
    '*'               shift, and go to state 62
    '/'               shift, and go to state 63

    FECHA_PARENTESES  [reduce using rule 56 (boolean_expression_float)]
    $default          reduce using rule 56 (boolean_expression_float)


State 44

   45 boolean_expression_int: boolean_expression_int . MAIOR boolean_expression_int
   46                       | boolean_expression_int . MENOR boolean_expression_int
   47                       | boolean_expression_int . MAIOR_IGUAL boolean_expression_int
   48                       | boolean_expression_int . MENOR_IGUAL boolean_expression_int
   49                       | boolean_expression_int . IGUAL boolean_expression_int
   50                       | boolean_expression_int . DIFERENTE boolean_expression_int
   51                       | boolean_expression_int . AND boolean_expression_int
   52                       | boolean_expression_int . OR boolean_expression_int
   54                       | ABRE_PARENTESES boolean_expression_int . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 99
    IGUAL             shift, and go to state 64
    DIFERENTE         shift, and go to state 65
    MAIOR             shift, and go to state 66
    MENOR             shift, and go to state 67
    MAIOR_IGUAL       shift, and go to state 68
    MENOR_IGUAL       shift, and go to state 69
    AND               shift, and go to state 70
    OR                shift, and go to state 71


State 45
